Fix bad vertical-align value in score.css

--- a/src/ui/components/misc/score.css
+++ b/src/ui/components/misc/score.css
@@ -31,7 +31,7 @@
 
 .decorated-text {
   color: #333333;
-  vertical-align: "middle";
+  vertical-align: middle;
 }
 
 .dot {
